--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,6 +11,11 @@ repositories {
 buildscript {
     repositories {
         jcenter()
+        google()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.4'
