--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,6 +6,16 @@ def safeExtGet(prop, fallback) {
 
 repositories {
     mavenCentral()
+    jcenter()
+    google()
+    maven {
+        // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+        url "$projectDir/../../../node_modules/react-native/android"
+    }
+    maven {
+        url 'https://maven.google.com/'
+        name 'Google'
+    }
 }
 
 buildscript {
@@ -18,7 +28,8 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.4'
+        //noinspection GradleDependency
+        classpath 'com.android.tools.build:gradle:3.2.1'
     }
 }
 
